# WingChun-TrainingAssistant

./: .gitmodules  CMakeLists.txt
src/: Application.cpp  Application.h  CMakeLists.txt  Declarations.h  FrontView.cpp  FrontView.h  TextureView.cpp  TextureView.h  TopView.cpp  TopView.h  main.cpp
